                                                         -*- coding: utf-8 -*-
Changes with Apache Traffic Server 4.2.0

  *) [TS-2479] Don't output orphan log after failover sucessfully.

  *) [TS-2370] SSL proxy.config.ssl.server.honor_cipher_order is backwards.
  Changed the default setting and changed the meaning of it in the code.

  *) [TS-2466] NOT increase the version of records.config when changing
   the local parameter
   Author: Yu Qing

  *) [TS-2469] remove libreadline which is gpl licensed.
   Author: Ben Aitchison <ben@meh.net.nz>

  *) [TS-2235] url_print should NOT output "?" for empty query string,
   fix two remains.
   Author: Yu Qing

  *) [TS-2475] Adding new transaction methods in C++ API

  *) [TS-2474] Change proxy.config.net.poll_timeout to 10ms consistently.

  *) [TS-2473] Fix C++ API includes for FreeBSD.
   Author: Radim Kolar <hsn@sendmail.cz>

  *) [TS-2467] traffic_shell doesn't work with tcl 8.6.
   Author: Ben Aitchison <ben@meh.net.nz>

  *) [TS-1365] Add a new configuration option, proxy.config.net.poll_timeout,
   with the same behavior as the command line option --poll_timeout. Also
   adjust AIO scheduling to correlate to this setting, to avoid additional
   CPU load. Note that this configuration is generally not necessary to
   configure, unless you are concerned with system idle CPU consumption.

  *) [TS-2468] Bring back the load balancer plugin.

  *) [TS-2465] libxml2 detection generates an invalid linker path.
   Author: Radim Kolar <hsn@sendmail.cz>

  *) [TS-2271] Threaded plugin support with 3rd party libraries.
   Author: Heikki Hannikainen <hessu@hes.iki.fi>

  *) [TS-2464] Remove useless and buggy connection header handling

  *) [TS-2457] Protocol.c: change usage of atoi to strtol.
   Author: Radim Kolar <hsn@sendmail.cz>

  *) [TS-2459] Fix wrong name for a couple of librecord APIs.
    Author: Yu Qing <happy_fish100@yahoo.com.cn>

  *) [TS-2463] Crash regression around slow-log feature, when logging an