@@ -54,13 +54,22 @@ RecFileOpenW(const char *file)
 }
 
 //-------------------------------------------------------------------------
+// RecFileSync
+//-------------------------------------------------------------------------
+
+int RecFileSync(RecHandle h_file)
+{
+  return (fsync(h_file) == 0) ? REC_ERR_OKAY : REC_ERR_FAIL;
+}
+
+//-------------------------------------------------------------------------
 // RecFileClose
 //-------------------------------------------------------------------------
 
-void
+int
 RecFileClose(RecHandle h_file)
 {
-  close(h_file);
+  return (close(h_file) == 0) ? REC_ERR_OKAY : REC_ERR_FAIL;
 }
 
 //-------------------------------------------------------------------------
