@@ -140,7 +140,7 @@ Rollback::Rollback(const char *baseFileName, bool root_access_needed_)
           mgmt_log(stderr, "[RollBack::Rollback] %s\n", alarmMsg);
           lmgmt->alarm_keeper->signalAlarm(MGMT_ALARM_CONFIG_UPDATE_FAILED, alarmMsg);
           ats_free(alarmMsg);
-          closeFile(fd);
+          closeFile(fd, true);
         } else {
           mgmt_fatal(stderr, 0,
                      "[RollBack::Rollback] Unable to find configuration file %s.\n\tCreation of a placeholder failed : %s\n",
@@ -201,11 +201,11 @@ Rollback::Rollback(const char *baseFileName, bool root_access_needed_)
       snprintf(alarmMsg, 2048, "Config file is read-only");
       mgmt_log(stderr, "[Rollback::Rollback] %s : %s\n", alarmMsg, fileName);
       lmgmt->alarm_keeper->signalAlarm(MGMT_ALARM_CONFIG_UPDATE_FAILED, alarmMsg);
-      closeFile(testFD);
+      closeFile(testFD, false);
     }
     ats_free(alarmMsg);
   } else {
-    closeFile(testFD);
+    closeFile(testFD, true);
   }
 }
 
@@ -338,8 +338,9 @@ Rollback::openFile(version_t version, int oflags, int *errnoPtr)
     }
     mgmt_log(stderr, "[Rollback::openFile] Open of %s failed: %s\n", fileName, strerror(errno));
   }
-
-  fcntl(fd, F_SETFD, 1);
+  else {
+    fcntl(fd, F_SETFD, 1);
+  }
 
   delete[]filePath;
 
@@ -347,18 +348,21 @@ Rollback::openFile(version_t version, int oflags, int *errnoPtr)
 }
 
 int
-Rollback::closeFile(int fd)
+Rollback::closeFile(int fd, bool callSync)
 {
-  if (fsync(fd) == -1) {
-    // INKqa11574: SGI fsync will return EBADF error if the file was
-    // open w/o write access (e.g. read-only).  Do not print an error
-    // if we get this errno back -- just in case this fd was open
-    // O_RDONLY.
-    if (errno != EBADF) {
-      mgmt_log(stderr, "[Rollback::closeFile] fsync failed for file '%s' (%d: %s)\n", fileName, errno, strerror(errno));
-    }
+  int result = 0;
+  if (callSync && fsync(fd) < 0) {
+    result = -1;
+    mgmt_log(stderr, "[Rollback::closeFile] fsync failed for file '%s' (%d: %s)\n", fileName, errno, strerror(errno));
   }
-  return (close(fd));
+
+  if (result == 0) {
+    result = close(fd);
+  }
+  else {
+    close(fd);
+  }
+  return result;
 }
 
 
@@ -422,6 +426,7 @@ Rollback::internalUpdate(textBuffer * buf, version_t newVersion, bool notifyChan
   char *nextVersion;
   int writeBytes;
   int diskFD;
+  int ret;
   versionInfo *toRemove;
   versionInfo *newBak;
   bool failedLink = false;
@@ -465,9 +470,9 @@ Rollback::internalUpdate(textBuffer * buf, version_t newVersion, bool notifyChan
   }
   // Write the buffer into the new configuration file
   writeBytes = write(diskFD, buf->bufPtr(), buf->spaceUsed());
-  closeFile(diskFD);
-  if (writeBytes != buf->spaceUsed()) {
-    mgmt_log(stderr, "[Rollback::intrernalUpdate] Unable to write new version of %s : %s\n", fileName, strerror(errno));
+  ret = closeFile(diskFD, true);
+  if ((ret < 0) || (writeBytes != buf->spaceUsed())) {
+    mgmt_log(stderr, "[Rollback::internalUpdate] Unable to write new version of %s : %s\n", fileName, strerror(errno));
     returnCode = SYS_CALL_ERROR_ROLLBACK;
     goto UPDATE_CLEANUP;
   }
@@ -632,7 +637,7 @@ Rollback::getVersion_ml(version_t version, textBuffer ** buffer)
 GET_CLEANUP:
 
   if (diskFD >= 0) {
-    closeFile(diskFD);
+    closeFile(diskFD, false);
   }
 
   return returnCode;
